[project]
name = "steamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.14.1",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
    "wordcloud>=1.9.4",
]

[tool.uv.workspace]
members = [
    "streamlit",
]
